Update body in index.html with buttons and instructions

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     </head>
     <body>
         <h1>A Game of Paper Scissors Rock</h1>
-        
+        <h3>Take Your Pick</h3>
+        <button class="btn btn-primary">Rock</button>
+        <button class="btn btn-primary">Paper</button>
+        <button class="btn btn-primary">Scissors</button>
+        <h3>Computer's Choice</h3>
+        <h4>Result here</h4>
     </body>
 
 </html>
