Create function to randomize computer's choice

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         
         
         <h3>Take Your Pick</h3>
-        <button class="btn btn-style">Rock</button>
-        <button class="btn btn-style">Paper</button>
-        <button class="btn btn-style">Scissors</button>
+        <button class="btn btn-style rock-img">Rock</button>
+        <button class="btn btn-style paper-img">Paper</button>
+        <button class="btn btn-style scissors-img">Scissors</button>
         <h3>Computer's Choice</h3>
         <h4>Result here</h4>
     </body>
