Create function to write result on HTML page

--- a/index.html
+++ b/index.html
@@ -24,8 +24,13 @@
         <button id="rock" class="btn btn-style rock-img" type="button">Rock</button>
         <button id="paper" class="btn btn-style paper-img" type="button">Paper</button>
         <button id="scissors" class="btn btn-style scissors-img" type="button">Scissors</button>
-        <h3>Computer's Choice</h3>
-        <h4>Result here</h4>
+        <div class="choices">
+            <h3>Computer's Choice</h3>
+        </div>
+        <div class="result">
+            <h4>Result here</h4>
+        </div>
+
     </body>
     <script type="text/javascript" src="/scripts/index.js"></script>
 
