End game after 5 rounds and add try again option

--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
         </div>
         
         <h3>Take Your Pick</h3>
-        <button id="rock" class="btn btn-style rock-img" type="button">Rock</button>
-        <button id="paper" class="btn btn-style paper-img" type="button">Paper</button>
-        <button id="scissors" class="btn btn-style scissors-img" type="button">Scissors</button>
-
+        <div class="buttons">
+            <button id="rock" class="btn btn-style rock-img" type="button">Rock</button>
+            <button id="paper" class="btn btn-style paper-img" type="button">Paper</button>
+            <button id="scissors" class="btn btn-style scissors-img" type="button">Scissors</button>
+        </div>
         <div class="result">
             <p></p>
         </div>
