--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UFT-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/main.css">
+        <link rel="stylesheet" href="main.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
         
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -47,7 +47,7 @@
         </div>
 
     </body>
-    <script type="text/javascript" src="/scripts/index.js"></script>
+    <script type="text/javascript" src="scripts/index.js"></script>
 
 
 </html>
